# revise-app

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  Makefile  README.md  SESSION_STATE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  pages.py  quest.py  tutor.py
backend/app/core/: config.py  logging.py
backend/app/db/: seed.py  session.py
backend/app/images/: minsterworth_map.xcf
backend/app/models/: quest.py  question.py  user.py
backend/app/services/: assets.py  auth.py  game_config.py  generators.py  marking.py  questions.py  tangram_service.py  tiers.py  tutor.py
backend/app/static/: reward_games.js  tangram_editor.js
backend/app/static/tangram/: bird.json  cat.json  fish.json  house.json  rocket.json
backend/app/templates/: feed_loader.py  shared.py  skills.yaml  skills_geography.yaml  templates_ch5_to_ch8.yaml  templates_geography.yaml
backend/app/templates/html/: admin.html  admin_games.html  admin_tangram.html  base.html  error.html  home.html  login.html  quest_chapter.html  quest_question.html  quest_result.html  quest_summary.html  quest_unit.html  subject_home.html
backend/tests/: test_assets.py  test_auth.py  test_config.py  test_feed_loader.py  test_gamification.py  test_generators_marking.py  test_geography.py  test_health.py  test_minsterworth.py  test_practice_boost.py  test_quality.py  test_quill_images.py  test_repeat_prevention.py  test_reward_games.py  test_subject_progress.py  test_tangram.py  test_tiers.py  test_tutor.py  test_unit_quest.py
(+33 files in other folders)
