[project]
name = "revise-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "matplotlib>=3.9",
  "jinja2>=3.1",
  "bcrypt>=4.2",
  "itsdangerous>=2.2",
  "openai>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"